--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,9 @@
 body {
   font-family: "Montserrat", serif;
   font-family: "Inter", serif;
-  background: linear-gradient(135deg, #000000, #1a1a1a);
+}
+.scrollbar {
+  @apply scrollbar-thin h-8 scrollbar-thumb-primary scrollbar-track-gray-700 scroll-smooth;
 }
 
 @layer base {
@@ -33,7 +35,8 @@ body {
   /* Ripple Animate Button */
   .btn {
     position: relative;
-    z-index: 1; 
+    z-index: 1;
+    pointer-events: auto;
   }
   .btn::before {
     content: "";
@@ -53,4 +56,19 @@ body {
     width: 300px;
     height: 300px;
   }
+
+  /* testimonial swiperjs pagination */
+  .swiper .swiper-pagination-bullet {
+    background-color: #ffffff;
+  }
+
+  .swiper .swiper-pagination-bullet-active {
+    background-color: #fccb28;
+  }
+}
+.horizontal-scroll-container {
+  pointer-events: none; /* Disables interactions on the container */
+}
+.horizontal-scroll-container .ripple-button-container {
+  pointer-events: auto; /* Re-enables interaction for the button */
 }
